feat(tc): add arm_ffa node in dts
For u-boot to use the device tree itself it needs to know about the
arm_ffa module. This is not relevant to linux but it doesn't hurt as it
won't use it.

Signed-off-by: Boyan Karatotev <boyan.karatotev@arm.com>
Change-Id: I6e75659e4950c62ce7377dc7941225eb5d7a3d8d

--- a/fdts/tc.dts
+++ b/fdts/tc.dts
@@ -755,4 +755,10 @@
 			compatible = "android,trusty-irq-v1";
 		};
 	};
+
+	/* used in U-boot, Linux doesn't care */
+	arm_ffa {
+		compatible = "arm,ffa";
+		method = "smc";
+	};
 };
