feat(handoff): support FW handoff between BL2-BL31
Add support for the firmware handoff framework between BL2 and BL31.
Create a transfer list in trusted SRAM, leveraging the larger SRAM sizes
in recent models. Load the HW_CONFIG as a TE along with entry point
parameters for BL31 execution.

Change-Id: I7c4c6e8353ca978a13520fb3e15fb2803f0f1d0e
Signed-off-by: Harrison Mutai <harrison.mutai@arm.com>

--- a/plat/arm/board/fvp/fdts/fvp_fw_config.dts
+++ b/plat/arm/board/fvp/fdts/fvp_fw_config.dts
@@ -26,6 +26,7 @@
 			secondary-load-address = <0x0 0x82000000>;
 		};
 
+#if !TRANSFER_LIST
 		/*
 		 * Load SoC and TOS firmware configs at the base of
 		 * non shared SRAM. The runtime checks ensure we don't
@@ -37,7 +38,7 @@
 			max-size = <0x200>;
 			id = <SOC_FW_CONFIG_ID>;
 		};
-
+#endif
 /* If required, SPD should enable loading of trusted OS fw config */
 #if defined(SPD_tspd) || defined(SPD_spmd)
 		tos_fw-config {
