--- a/tools/amlogic/Makefile
+++ b/tools/amlogic/Makefile
@@ -7,6 +7,7 @@
 MAKE_HELPERS_DIRECTORY := ../../make_helpers/
 include ${MAKE_HELPERS_DIRECTORY}build_macros.mk
 include ${MAKE_HELPERS_DIRECTORY}build_env.mk
+include ${MAKE_HELPERS_DIRECTORY}toolchain-tools.mk
 
 PROJECT := doimage${BIN_EXT}
 OBJECTS := doimage.o
@@ -26,7 +27,7 @@ else
   Q :=
 endif
 
-HOSTCC := gcc
+HOSTCC := $(host-cc)
 
 .PHONY: all clean distclean
 
