--- a/fdts/cca_cot_descriptors.dtsi
+++ b/fdts/cca_cot_descriptors.dtsi
@@ -1,10 +1,10 @@
 /*
- * Copyright (c) 2020, ARM Limited. All rights reserved.
+ * Copyright (c) 2023-2024, Arm Limited. All rights reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  */
 
-#include <tools_share/tbbr_oid.h>
+#include <tools_share/cca_oid.h>
 #include <common/tbbr/tbbr_img_def.h>
 #include <common/nv_cntr_ids.h>
 
@@ -12,10 +12,10 @@ cot {
 	manifests {
 		compatible = "arm, cert-descs";
 
-		trusted_boot_fw_cert: trusted_boot_fw_cert {
+		cca_content_cert: cca_content_cert {
 			root-certificate;
-			image-id =<TRUSTED_BOOT_FW_CERT_ID>;
-			antirollback-counter = <&trusted_nv_counter>;
+			image-id =<CCA_CONTENT_CERT_ID>;
+			antirollback-counter = <&cca_nv_counter>;
 
 			tb_fw_hash: tb_fw_hash {
 				oid = TRUSTED_BOOT_FW_HASH_OID;
@@ -29,113 +29,57 @@ cot {
 			fw_config_hash: fw_config_hash {
 				oid = FW_CONFIG_HASH_OID;
 			};
-		};
-
-		trusted_key_cert: trusted_key_cert {
-			root-certificate;
-			image-id = <TRUSTED_KEY_CERT_ID>;
-			antirollback-counter = <&trusted_nv_counter>;
-
-			trusted_world_pk: trusted_world_pk {
-				oid = TRUSTED_WORLD_PK_OID;
-			};
-			non_trusted_world_pk: non_trusted_world_pk {
-				oid = NON_TRUSTED_WORLD_PK_OID;
-			};
-		};
-
-		scp_fw_key_cert: scp_fw_key_cert {
-			image-id = <SCP_FW_KEY_CERT_ID>;
-			parent = <&trusted_key_cert>;
-			signing-key = <&trusted_world_pk>;
-			antirollback-counter = <&trusted_nv_counter>;
-
-			scp_fw_content_pk: scp_fw_content_pk {
-				oid = SCP_FW_CONTENT_CERT_PK_OID;
-			};
-		};
-
-		scp_fw_content_cert: scp_fw_content_cert {
-			image-id = <SCP_FW_CONTENT_CERT_ID>;
-			parent = <&scp_fw_key_cert>;
-			signing-key = <&scp_fw_content_pk>;
-			antirollback-counter = <&trusted_nv_counter>;
-
-			scp_fw_hash: scp_fw_hash {
-				oid = SCP_FW_HASH_OID;
-			};
-		};
-
-		soc_fw_key_cert: soc_fw_key_cert {
-			image-id = <SOC_FW_KEY_CERT_ID>;
-			parent = <&trusted_key_cert>;
-			signing-key = <&trusted_world_pk>;
-			antirollback-counter = <&trusted_nv_counter>;
-			soc_fw_content_pk: soc_fw_content_pk {
-				oid = SOC_FW_CONTENT_CERT_PK_OID;
-			};
-		};
-
-		soc_fw_content_cert: soc_fw_content_cert {
-			image-id = <SOC_FW_CONTENT_CERT_ID>;
-			parent = <&soc_fw_key_cert>;
-			signing-key = <&soc_fw_content_pk>;
-			antirollback-counter = <&trusted_nv_counter>;
-
 			soc_fw_hash: soc_fw_hash {
 				oid = SOC_AP_FW_HASH_OID;
 			};
 			soc_fw_config_hash: soc_fw_config_hash {
 				oid = SOC_FW_CONFIG_HASH_OID;
 			};
+			rmm_hash: rmm_hash {
+				oid = RMM_HASH_OID;
+			};
 		};
 
-		trusted_os_fw_key_cert: trusted_os_fw_key_cert {
-			image-id = <TRUSTED_OS_FW_KEY_CERT_ID>;
-			parent = <&trusted_key_cert>;
-			signing-key = <&trusted_world_pk>;
+		core_swd_key_cert: core_swd_key_cert {
+			root-certificate;
+			image-id = <CORE_SWD_KEY_CERT_ID>;
+			signing-key = <&swd_rot_pk>;
 			antirollback-counter = <&trusted_nv_counter>;
 
-			tos_fw_content_pk: tos_fw_content_pk {
-				oid = TRUSTED_OS_FW_CONTENT_CERT_PK_OID;
+			core_swd_pk: core_swd_pk {
+				oid = CORE_SWD_PK_OID;
 			};
 		};
 
 		trusted_os_fw_content_cert: trusted_os_fw_content_cert {
 			image-id = <TRUSTED_OS_FW_CONTENT_CERT_ID>;
-			parent = <&trusted_os_fw_key_cert>;
-			signing-key = <&tos_fw_content_pk>;
+			parent = <&core_swd_key_cert>;
+			signing-key = <&core_swd_pk>;
 			antirollback-counter = <&trusted_nv_counter>;
 
 			tos_fw_hash: tos_fw_hash {
 				oid = TRUSTED_OS_FW_HASH_OID;
-			};
-			tos_fw_extra1_hash: tos_fw_extra1_hash {
-				oid = TRUSTED_OS_FW_EXTRA1_HASH_OID;
-			};
-			tos_fw_extra2_hash: tos_fw_extra2_hash {
-				oid = TRUSTED_OS_FW_EXTRA2_HASH_OID;
 			};
 			tos_fw_config_hash: tos_fw_config_hash {
 				oid = TRUSTED_OS_FW_CONFIG_HASH_OID;
 			};
 		};
 
-		non_trusted_fw_key_cert: non_trusted_fw_key_cert {
-			image-id = <NON_TRUSTED_FW_KEY_CERT_ID>;
-			parent = <&trusted_key_cert>;
-			signing-key = <&non_trusted_world_pk>;
+		plat_key_cert: plat_key_cert {
+			root-certificate;
+			image-id = <PLAT_KEY_CERT_ID>;
+			signing-key = <&prot_pk>;
 			antirollback-counter = <&non_trusted_nv_counter>;
 
-			nt_fw_content_pk: nt_fw_content_pk {
-				oid = NON_TRUSTED_FW_CONTENT_CERT_PK_OID;
+			plat_pk: plat_pk {
+				oid = PLAT_PK_OID;
 			};
 		};
 
 		non_trusted_fw_content_cert: non_trusted_fw_content_cert {
 			image-id = <NON_TRUSTED_FW_CONTENT_CERT_ID>;
-			parent = <&non_trusted_fw_key_cert>;
-			signing-key = <&nt_fw_content_pk>;
+			parent = <&plat_key_cert>;
+			signing-key = <&plat_pk>;
 			antirollback-counter = <&non_trusted_nv_counter>;
 
 			nt_world_bl_hash: nt_world_bl_hash {
@@ -149,8 +93,8 @@ cot {
 #if defined(SPD_spmd)
 		sip_sp_content_cert: sip_sp_content_cert {
 			image-id = <SIP_SP_CONTENT_CERT_ID>;
-			parent = <&trusted_key_cert>;
-			signing-key = <&trusted_world_pk>;
+			parent = <&core_swd_key_cert>;
+			signing-key = <&core_swd_pk>;
 			antirollback-counter = <&trusted_nv_counter>;
 
 			sp_pkg1_hash: sp_pkg1_hash {
@@ -165,6 +109,14 @@ cot {
 			sp_pkg4_hash: sp_pkg4_hash {
 				oid = SP_PKG4_HASH_OID;
 			};
+		};
+
+		plat_sp_content_cert: plat_sp_content_cert {
+			image-id = <PLAT_SP_CONTENT_CERT_ID>;
+			parent = <&plat_key_cert>;
+			signing-key = <&plat_pk>;
+			antirollback-counter = <&non_trusted_nv_counter>;
+
 			sp_pkg5_hash: sp_pkg5_hash {
 				oid = SP_PKG5_HASH_OID;
 			};
@@ -184,52 +136,52 @@ cot {
 	images {
 		compatible = "arm, img-descs";
 
+		fw_config {
+			image-id = <FW_CONFIG_ID>;
+			parent = <&cca_content_cert>;
+			hash = <&fw_config_hash>;
+		};
+
 		hw_config {
 			image-id = <HW_CONFIG_ID>;
-			parent = <&trusted_boot_fw_cert>;
+			parent = <&cca_content_cert>;
 			hash = <&hw_config_hash>;
+		};
+
+		tb_fw_hash {
+			image-id = <BL2_IMAGE_ID>;
+			parent = <&cca_content_cert>;
+			hash = <&tb_fw_hash>;
 		};
 
 		tb_fw_config {
 			image-id = <TB_FW_CONFIG_ID>;
-			parent = <&trusted_boot_fw_cert>;
+			parent = <&cca_content_cert>;
 			hash = <&tb_fw_config_hash>;
-		};
-
-		scp_bl2_image {
-			image-id = <SCP_BL2_IMAGE_ID>;
-			parent = <&scp_fw_content_cert>;
-			hash = <&scp_fw_hash>;
 		};
 
 		bl31_image {
 			image-id = <BL31_IMAGE_ID>;
-			parent = <&soc_fw_content_cert>;
+			parent = <&cca_content_cert>;
 			hash = <&soc_fw_hash>;
 		};
 
 		soc_fw_config {
 			image-id = <SOC_FW_CONFIG_ID>;
-			parent = <&soc_fw_content_cert>;
+			parent = <&cca_content_cert>;
 			hash = <&soc_fw_config_hash>;
+		};
+
+		rmm_image {
+			image-id = <RMM_IMAGE_ID>;
+			parent = <&cca_content_cert>;
+			hash = <&rmm_hash>;
 		};
 
 		bl32_image {
 			image-id = <BL32_IMAGE_ID>;
 			parent = <&trusted_os_fw_content_cert>;
 			hash = <&tos_fw_hash>;
-		};
-
-		bl32_extra1_image {
-			image-id = <BL32_EXTRA1_IMAGE_ID>;
-			parent = <&trusted_os_fw_content_cert>;
-			hash = <&tos_fw_extra1_hash>;
-		};
-
-		bl32_extra2_image {
-			image-id = <BL32_EXTRA2_IMAGE_ID>;
-			parent = <&trusted_os_fw_content_cert>;
-			hash = <&tos_fw_extra2_hash>;
 		};
 
 		tos_fw_config {
@@ -277,25 +229,25 @@ cot {
 
 		sp_pkg5 {
 			image-id = <SP_PKG5_ID>;
-			parent = <&sip_sp_content_cert>;
+			parent = <&plat_sp_content_cert>;
 			hash = <&sp_pkg5_hash>;
 		};
 
 		sp_pkg6 {
 			image-id = <SP_PKG6_ID>;
-			parent = <&sip_sp_content_cert>;
+			parent = <&plat_sp_content_cert>;
 			hash = <&sp_pkg6_hash>;
 		};
 
 		sp_pkg7 {
 			image-id = <SP_PKG7_ID>;
-			parent = <&sip_sp_content_cert>;
+			parent = <&plat_sp_content_cert>;
 			hash = <&sp_pkg7_hash>;
 		};
 
 		sp_pkg8 {
 			image-id = <SP_PKG8_ID>;
-			parent = <&sip_sp_content_cert>;
+			parent = <&plat_sp_content_cert>;
 			hash = <&sp_pkg8_hash>;
 		};
 #endif
@@ -308,6 +260,11 @@ non_volatile_counters: non_volatile_counters {
 	#address-cells = <1>;
 	#size-cells = <0>;
 
+	cca_nv_counter: cca_nv_counter {
+		id  = <TRUSTED_NV_CTR_ID>;
+		oid = CCA_FW_NVCOUNTER_OID;
+	};
+
 	trusted_nv_counter: trusted_nv_counter {
 		id  = <TRUSTED_NV_CTR_ID>;
 		oid = TRUSTED_FW_NVCOUNTER_OID;
@@ -316,5 +273,17 @@ non_volatile_counters: non_volatile_counters {
 	non_trusted_nv_counter: non_trusted_nv_counter {
 		id  = <NON_TRUSTED_NV_CTR_ID>;
 		oid = NON_TRUSTED_FW_NVCOUNTER_OID;
+	};
+};
+
+rot_keys {
+	compatible = "arm, rot-key";
+
+	swd_rot_pk: swd_rot_pk {
+		oid = SWD_ROT_PK_OID;
+	};
+
+	prot_pk: prot_pk {
+		oid = PROT_PK_OID;
 	};
 };
